# terraform-app-engine-example

./: .gcloudignore  .gitignore  Makefile  pyproject.toml
src/: main.py  requirements.txt
terraform/: .terraform.lock.hcl  app-engine.tf  backend.tf  project.tf  services.tf  versions.tf
