[tool.poetry]
name = "tarraform-app-engine-example"
version = "0.1.0"
description = "Example terraform project to deploy a basic flask app"
authors = ["Mathew Savage <mathew@mathewsavage.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
